# filefusep2p

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/app/receive/: page.tsx
frontend/app/send/: page.tsx
frontend/components/: file-card.tsx  file-transfer-card.tsx  logo.tsx  stats.tsx  theme-toggle.tsx  wifi-animation.tsx
frontend/components/ui/: progress.tsx
frontend/txtfiles/: page.txt  receive.txt  receiveup.txt  send.txt  sendupd.txt
