[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.3", features = ["ws"]}
futures =  "0.3.31"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"]}
uuid = {version = "1.16.0", features = ["v4"]}
